Add missing DB keys
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42837

--- a/Vanrise/Code/Vanrise.HelperTools/App.config
+++ b/Vanrise/Code/Vanrise.HelperTools/App.config
@@ -11,14 +11,19 @@
     <add key="ServerIP" value="192.168.110.185"/>
     <add key="SQLUsername" value="readonlyUser"/>
     <add key="SQLPassword" value="P@ssw0rd"/>
-    <add key="ActiveDBs" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure#StandardTOneWhS_BEStructure_StateBackup#StandardCloudXpointStrcuture#StandardTOneWhS_CDR#StandardTOneWhS_Analytics#StandardMediation_CDRStructure#StandardMediationStructure#StandardRetailStructure#StandardRetail_Analytics#StandardRetail_EDR#StandardRetailStructure_Ringo#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure#StandardCDRAnalysisStructure"/>
+    <add key="ActiveDBs" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure#StandardTOneWhS_BEStructure_StateBackup#StandardCloudXpointStrcuture#StandardTOneWhS_CDR#StandardTOneWhS_Analytics#StandardMediation_CDRStructure#StandardMediationStructure#StandardRetailStructure#StandardRetail_Analytics#StandardRetail_EDR#StandardRetailStructure_Ringo#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure#StandardCDRAnalysisStructure#StandardClearVoiceStructure#StandardClearVoiceStructureBI#StandardCarrierPortalStructure"/>
     
     <add key="Mediation" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardMediation_CDRStructure#StandardMediationStructure"/>
     <add key="TOneV2" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardTOneWhS_BEStructure#StandardTOneWhS_BEStructure_StateBackup#StandardTOneWhS_CDR#StandardTOneWhS_Analytics"/>
     <add key="CloudXPointV2" value="StandardCloudXpointStrcuture"/>
+    <add key="INSOFT" value="StandardCloudXpointStrcuture"/>
     <add key="Retail" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardRetailStructure#StandardRetail_Analytics#StandardRetail_EDR"/>
     <add key="Retail.MultiNet" value=""/>
+    <add key="Retail.Ringo" value="StandardRetailStructure_Ringo"/>
+    <add key="Retail.Zajil" value=""/>
+    <add key="CarrierPortal" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardCarrierPortalStructure"/>
     <add key="XBooster" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure"/>
+    <add key="ClearVoice" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardClearVoiceStructure#StandardClearVoiceStructureBI"/>
     <add key="CDRAnalysis" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardCDRAnalysisStructure"/>
 
     <add key="sqlFilesOutputPath" value="\\192.168.110.185\Fixes\WebSite\{2}\{0}\DataBaseFirstDeploymentScripts\{1}"/>
