--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
@@ -49,6 +49,12 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.AccountBalance.Business">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.AccountBalance.Entities">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Caching">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
     </Reference>
@@ -82,6 +88,9 @@
     </Reference>
     <Reference Include="Vanrise.GenericData.Pricing">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Pricing.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Invoice.Business">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Invoice.Business.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Invoice.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -127,6 +136,11 @@
     <Compile Include="Country\CustomerZoneManager.cs" />
     <Compile Include="CarrierAccounts\ReevaluateCarrierProfileStatusChangedHandler.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="FinancialAccount\EventHandlers\FinancialAccountCarrierAccountStatusChangedHandler.cs" />
+    <Compile Include="FinancialAccount\EventHandlers\FinancialAccountCarrierProfileStatusChangedHandler.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountBESettings.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountDefinitionManager.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountManager.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="PricingRules\PricingRuleRateTypeItemContext.cs" />
     <Compile Include="ReleaseCodeManager.cs" />
