--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -406,6 +406,8 @@
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\ActionDefinitions\Templates\ActionDefinitionSendEmailSettings.html" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\BalanceAlertRule\retail-be-balancealertrule-threshold-percentage.js" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\BalanceAlertRule\Templates\PercentageBalanceAlertThresholdTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DataRecordFieldFormulas\retail-be-datarecordtypefields-formula-parentaccount.js" />
+    <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DataRecordFieldFormulas\Templates\ParentAccountFieldFormulaTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DataRecordFieldFormulas\Templates\ZoneEvaluatorFieldFormulaTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DataRecordFieldFormulas\retail-be-datarecordtypefields-formula-zoneevaluator.js" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DID\retail-be-didnumbertype-range.js" />
