Add new DBs keys
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42855

--- a/Vanrise/Code/Vanrise.HelperTools/App.config
+++ b/Vanrise/Code/Vanrise.HelperTools/App.config
@@ -22,10 +22,15 @@
     <add key="Retail.Ringo" value="StandardRetailStructure_Ringo"/>
     <add key="Retail.Zajil" value=""/>
     <add key="CarrierPortal" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardCarrierPortalStructure"/>
+    <add key="CarrierPortal.RingoPortal" value=""/>
+    <add key="CarrierPortal.SupplierPricelist" value=""/>
+    <add key="CarrierPortal.PartnerPortal" value=""/>
+    <add key="BIV2" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure"/>
     <add key="XBooster" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardXBoosterStructure#StandardXBooster_CDRComparisonOutputStructure"/>
     <add key="ClearVoice" value="StandardConfigurationStructure#StandardLoggingStructure#StandardTransactionStructure#StandardClearVoiceStructure#StandardClearVoiceStructureBI"/>
     <add key="CDRAnalysis" value="StandardConfigurationStructure#StandardLoggingStructure#StandardQueueingStructure#StandardTransactionStructure#StandardCDRAnalysisStructure"/>
-
+    <add key="TOne.Web.Online" value="WebAPI"/>
+    <add key="TOne" value="StandardDevelopmentStructure"/>
     <add key="sqlFilesOutputPath" value="\\192.168.110.185\Fixes\WebSite\{2}\{0}\DataBaseFirstDeploymentScripts\{1}"/>
     <add key="javascriptsOutputPath" value="\\192.168.110.185\Fixes\WebSite\{2}\{0}\Client\{1}"/>
   </appSettings>
