add configs to csproj file
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42871

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -608,6 +608,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\PublishTOneV2.pubxml" />
+    <Content Include="appSettings.config" />
+    <Content Include="ConnectionStrings.config" />
     <Content Include="Web.config.CloudXPoint.exclude" />
     <Content Include="WebBI.config.exclude" />
     <None Include="Web.Release.config">
