--- a/Retail/Code/Retail.BusinessEntity.BP.Arguments/Retail.BusinessEntity.BP.Arguments.csproj
+++ b/Retail/Code/Retail.BusinessEntity.BP.Arguments/Retail.BusinessEntity.BP.Arguments.csproj
@@ -46,8 +46,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountRecurringChargeEvaluatorInput.cs" />
+    <Compile Include="ApplyRecurringChargeSubProcessInput.cs" />
+    <Compile Include="AccountRecurringChargeEvaluatorProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Retail.BusinessEntity.Entities\Retail.BusinessEntity.Entities.csproj">
+      <Project>{c08fd318-049c-49ce-8bc4-85bf296cbab9}</Project>
+      <Name>Retail.BusinessEntity.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
