--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -155,6 +155,7 @@
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorDefinitionSettings.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorOutput.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorSettings.cs" />
+    <Compile Include="RecurringCharge\RecurChargeBalanceUpdateSummary.cs" />
     <Compile Include="Settings\DIDTechnicalSettings.cs" />
     <Compile Include="Package\Definition\PackageDefinition.cs" />
     <Compile Include="Package\Definition\PackageDefinitionConfig.cs" />
