--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Data.SQL/TOne.WhS.BusinessEntity.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Data.SQL/TOne.WhS.BusinessEntity.Data.SQL.csproj
@@ -92,6 +92,7 @@
     <Compile Include="SupplierZoneDataManager.cs" />
     <Compile Include="SwitchConnectivityDataManager.cs" />
     <Compile Include="SwitchDataManager.cs" />
+    <Compile Include="WHSFinancialAccountDataManager.cs" />
     <Compile Include="ZoneServiceConfigDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
