--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -120,10 +120,13 @@
     <Compile Include="CodeGroup\UploadCodeGroupLog.cs" />
     <Compile Include="CodePrefixInfo.cs" />
     <Compile Include="CustomerInvoiceSettingInfo.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountDefinitionInfoFilter.cs" />
     <Compile Include="FinancialAccount\WHSCarrierFinancialAccountData.cs" />
     <Compile Include="FinancialAccount\Enums.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccount.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountDefinitionConfig.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccountDefinitionExtendedSettings.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountDefinitionInfo.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccountDetail.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccountInfo.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccountInfoFilter.cs" />
