adding new validation on RCb_number
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42931

--- a/FZero/Vanrise.Fzero.Bypass/Vanrise.Fzero.Bypass.csproj
+++ b/FZero/Vanrise.Fzero.Bypass/Vanrise.Fzero.Bypass.csproj
@@ -376,6 +376,9 @@
     <Compile Include="ViewGeneratedCall.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewGeneratedCallsNew.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="ViewSummary.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
